新版通讯录

--- a/html/newcontact.html
+++ b/html/newcontact.html
@@ -58,12 +58,12 @@ ul li{
 			</div>
 			<div id="divContactCon">
 				<ul data-role="listview" data-inset="true" style="text-indent: 15px;">
-				  <li ><a href="#" onclick="loadContact()">风险部</a></li>
-				  <li ><a href="#" onclick="loadContact()">财务部</a></li>
-				  <li ><a href="#" onclick="loadContact()">人力资源部</a></li>
-				  <li ><a href="#" onclick="loadContact()">信息部</a></li>
-				  <li ><a href="#" onclick="loadContact()">战略规划部</a></li>
-				  <li ><a href="#" onclick="loadContact()">党群部</a></li>
+				  <li ><a href="#" onclick="loadContact()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">风险部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">财务部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">人力资源部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">信息部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">战略规划部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">党群部</h3></a></li>
 				</ul>
 			</div>
 		</div>
