--- a/html/newcontact1.html
+++ b/html/newcontact1.html
@@ -58,12 +58,12 @@ ul li{
 			</div>
 			<div id="divContactCon">
 				<ul data-role="listview" data-inset="true" style="text-indent: 15px;">
-				  <li ><a href="#" onclick="loadContact1()">招聘部</a></li>
-				  <li ><a href="#" onclick="loadContact1()">培训部</a></li>
-				  <li ><a href="#" onclick="loadContact1()">薪酬部</a></li>
-				  <li ><a href="#" onclick="loadContact1()">绩效管理部</a></li>
-				  <li ><a href="#" onclick="loadContact1()">员工发展部</a></li>
-				  <li ><a href="#" onclick="loadContact1()">科技发展部</a></li>
+				  <li ><a href="#" onclick="loadContact1()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">招聘部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact1()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">培训部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact1()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">薪酬部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact1()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">绩效管理部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact1()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">员工发展部</h3></a></li>
+				  <li ><a href="#" onclick="loadContact1()"><img style="margin-left: 10px; margin-top: 25px;width: 30px;height: 30px;" src="../assets/home/items/module-res/contact/zuzhi.png"><h3 style="margin-left: -4em;">科技发展部</h3></a></li>
 				</ul>
 			</div>
 		</div>
