--- a/html/newcontact2.html
+++ b/html/newcontact2.html
@@ -62,13 +62,13 @@ ul li a span {
 				</table>
 			</div>
 			<div id="divContactCon">
-				<ul data-role="listview" data-inset="true" style="text-indent: 15px;" data-icon="false">
-				  <li ><a href="#" onclick="loadContact2()">张强<span>查看详情>><span></a></li>
-				  <li ><a href="#" onclick="loadContact2()">李宏杰<span>查看详情>><span></a></li>
+				<ul data-role="listview" data-inset="true" style="text-indent: 15px;">
+				  <li ><a href="#" onclick="loadContact2()"><img style="margin-top: 10px;width: 60px;height: 60px;" src="../assets/home/items/module-res/contact/person.png"><h3 style="margin-left: -3em;">张强<span>dd</span></h3></a></li>
+				  <!-- <li ><a href="#" onclick="loadContact2()">李宏杰<span>查看详情>><span></a></li>
 				  <li ><a href="#" onclick="loadContact2()">王明发<span>查看详情>><span></a></li>
 				  <li ><a href="#" onclick="loadContact2()">李晓磊<span>查看详情>><span></a></li>
 				  <li ><a href="#" onclick="loadContact2()">王晓庆<span>查看详情>><span></a></li>
-				  <li ><a href="#" onclick="loadContact2()">陈国峰<span>查看详情>><span></a></li>
+				  <li ><a href="#" onclick="loadContact2()">陈国峰<span>查看详情>><span></a></li> -->
 				</ul>
 			</div>
 		</div>
