--- a/html/home.html
+++ b/html/home.html
@@ -66,7 +66,7 @@ function loadConnections() {
 function inittodos(){
 	if (icount!=gcount){
 		
-		$.hori.showLoading();
+		//$.hori.showLoading();
 		var url = $.hori.getconfig().appServerHost+"view/oamobile/todosnum/Produce/GeneralMessage.nsf/GetAllMsgInfoAgent?openagent&random="+Math.random();
 		$.hori.ajax({
 				"type":"post",
@@ -122,6 +122,7 @@ var icount=0;
 		try {
 			var hori = $.hori;
 			/*设置标题*/
+			$.hori.showLoading();
 			hori.setHeaderTitle("首页");
 			//初始化顶部滑动图片
 			initSwiperData();
@@ -353,8 +354,19 @@ a {
 				<div class="ui-block-c">
 					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/mail.png" width="68" height="68">
 					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span>
-					<!-- <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/Connection.png">
-					</a> <br> <span style="color: #434343"><strong>通号社区</strong></span> -->
+				</div>
+			</div>
+			<br>
+			<div class="ui-grid-b">
+				<div class="ui-block-a">
+					<a href="javascript:void(0)" onclick="loadNewContact()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/tel.png" width="68" height="68">
+					</a> <br> <span style="color: #434343"><strong>新版通讯录</strong></span>
+				</div>
+				<div class="ui-block-b">
+					
+				</div>
+				<div class="ui-block-c">
+					
 				</div>
 			</div>
 			<br>
