新版通讯录，新增票据流程

--- a/html/home.html
+++ b/html/home.html
@@ -321,7 +321,7 @@ a {
                     <a href="#">more</a>
                   </div> -->
              </div>
-			 <span style="float: right;color: rgb(26, 192, 26);line-height: 2em;"><strong id="chName"></strong></span>
+			 <span style="float: right;color: rgb(26, 192, 26);line-height: 2em;"><strong id="chName">欢迎您，</strong></span>
              <br>
 			 
 			<div class="ui-grid-b" id="divOne" style="clear: both;">
