--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
 		<script type="text/javascript">
 			$(document).ready(function(){
 
-				$.hori.registerEvent("case", "navButtonTouchUp", function() {
+				$.hori.registerEvent("case", "casePresented", function() {
 					$("#password").attr("value", "");
 				});
 
