--- a/html/newcontact2.html
+++ b/html/newcontact2.html
@@ -25,9 +25,10 @@ ul li {
 	line-height: 2.5em;
 }
 
-ul li a span {
+ul li a font {
 	float: right;
 	padding-right: 0px;
+	font-weight: 500;
 }
 </style>
 <script type="text/javascript">
@@ -62,13 +63,17 @@ ul li a span {
 				</table>
 			</div>
 			<div id="divContactCon">
-				<ul data-role="listview" data-inset="true" style="text-indent: 15px;">
-				  <li ><a href="#" onclick="loadContact2()"><img style="margin-top: 10px;width: 60px;height: 60px;" src="../assets/home/items/module-res/contact/person.png"><h3 style="margin-left: -3em;">张强<span>dd</span></h3></a></li>
-				  <!-- <li ><a href="#" onclick="loadContact2()">李宏杰<span>查看详情>><span></a></li>
-				  <li ><a href="#" onclick="loadContact2()">王明发<span>查看详情>><span></a></li>
-				  <li ><a href="#" onclick="loadContact2()">李晓磊<span>查看详情>><span></a></li>
-				  <li ><a href="#" onclick="loadContact2()">王晓庆<span>查看详情>><span></a></li>
-				  <li ><a href="#" onclick="loadContact2()">陈国峰<span>查看详情>><span></a></li> -->
+				<ul data-role="listview" data-inset="true" style="text-indent: 15px;" >
+				  <li ><a href="#" onclick="loadContact2()" style="line-height: 1em;"><img style="padding-top: 10px;margin-left: -10px;" src="../assets/home/items/module-res/contact/person.png"><font>通号电缆有限公司</font><h3 style="margin-left: -3.5em;padding-top: 1.5em;">张强</h3><font>人力资源部</font>
+				  </a></li>
+				  <li ><a href="#" onclick="loadContact2()" style="line-height: 1em;"><img style="padding-top: 10px;margin-left: -10px;" src="../assets/home/items/module-res/contact/person.png"><font>通号电缆有限公司</font><h3 style="margin-left: -3.5em;padding-top: 1.5em;">李宏杰</h3><font>人力资源部</font>
+				  </a></li>
+				  <li ><a href="#" onclick="loadContact2()" style="line-height: 1em;"><img style="padding-top: 10px;margin-left: -10px;" src="../assets/home/items/module-res/contact/person.png"><font>通号电缆有限公司</font><h3 style="margin-left: -3.5em;padding-top: 1.5em;">王明发</h3><font>人力资源部</font>
+				  </a></li>
+				  <li ><a href="#" onclick="loadContact2()" style="line-height: 1em;"><img style="padding-top: 10px;margin-left: -10px;" src="../assets/home/items/module-res/contact/person.png"><font>通号电缆有限公司</font><h3 style="margin-left: -3.5em;padding-top: 1.5em;">李晓磊</h3><font>人力资源部</font>
+				  </a></li>
+				  <li ><a href="#" onclick="loadContact2()" style="line-height: 1em;"><img style="padding-top: 10px;margin-left: -10px;" src="../assets/home/items/module-res/contact/person.png"><font>通号电缆有限公司</font><h3 style="margin-left: -3.5em;padding-top: 1.5em;">王晓庆</h3><font>人力资源部</font>
+				  </a></li>
 				</ul>
 			</div>
 		</div>
