--- a/html/home.html
+++ b/html/home.html
@@ -83,9 +83,20 @@ function inittodos(){
 						alert(json.exception);
 						$.hori.hideLoading();
 					}else{
-						$("#spanTodo").html(json.number);
-						localStorage.setItem("tasknumber",json.number);
-						icount= gcount;
+						if(json.number==0){
+						}else{
+							$("#spanTodo").css({
+								"float":"right",
+								"position":"absolute",
+								"margin-left":"70px",
+								"margin-top":"-80px",
+								"font-size":"13px",
+								"display":"block"
+							});
+							$("#spanTodo").html(json.number);
+							localStorage.setItem("tasknumber",json.number);
+							icount= gcount;
+						}
 						$.hori.hideLoading();
 					}
 				},
@@ -229,7 +240,6 @@ var icount=0;
 	}
 	//下载traveler和Connections
 	function loadmaildown(){
-		$.hori.showLoading();
 		$( "#ConnectionspopupDialog" ).popup( "close" );
 		$( "#mailpopupDialog" ).popup( "close" )
 		$.hori.openUrl("https://m.crsc.cn",function(data){
@@ -299,7 +309,14 @@ var icount=0;
 a {
 	text-decoration: none;
 }
-
+.ui-corner-all{
+	-webkit-border-radius: 1em;
+	border-radius: 1em;
+}
+.ui-btn-corner-all {
+	-webkit-border-radius: 1em;
+	border-radius: 1em;
+}
 .bubble-count {
 	font-size: 11px;
 	font-weight: bold;
@@ -374,7 +391,7 @@ a {
 				<div class="ui-block-a">
 					<div style="width: 100px;"><a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link" style="display:inline-block;"> 
 					<img id="imgToDo" width="68" height="68" src="../assets/home/items/module-res/task.png">
-					</a><span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all" style="float: right; position: absolute; margin-left: -10px;margin-top: -9px;">0</span>
+					</a><span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all" style="float: right; position: absolute; margin-left: -10px;margin-top: -9px;font-size: 13px;display: none;">0</span>
 					<br> <span style="color: #434343"><strong>待办任务</strong></span>
 					</div>
 				</div>
